--- a/backoffice.html
+++ b/backoffice.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg bg-danger">
+    <nav class="navbar navbar-expand-lg bg-danger navbar-dark">
       <div class="container">
         <a class="navbar-brand" href="#"
           ><img src="./assets/Media-World-Logo-Vector.svg-.png" width="200px" alt="logo mediaworld"
