--- a/details.html
+++ b/details.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg bg-danger">
+    <nav class="navbar navbar-expand-lg bg-danger navbar-dark">
       <div class="container">
         <a class="navbar-brand" href="#"
           ><a class="navbar-brand" href="#"
